[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/floor/lava panel.png" type="Texture" id=1]
[ext_resource path="res://scenes/floor/FloorLava.gd" type="Script" id=2]

[node name="FloorLava" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 11 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -13, 7, 0, 0, 13, 7, 0, 14 )

[node name="LavaGrowth" type="Timer" parent="."]
wait_time = 3.381
one_shot = true

[node name="RespawnCrumblingTile" type="Timer" parent="."]

[connection signal="timeout" from="LavaGrowth" to="." method="_on_LavaGrowth_timeout"]
[connection signal="timeout" from="RespawnCrumblingTile" to="." method="_on_RespawnCrumblingTile_timeout"]
